samples/_failures_safe/1761510176_6f9270_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_774ae9df.c: In function ‘main’:
./samples/SAFE/__tmp_774ae9df.c:166:9: error: expected declaration or statement at end of input
  166 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_774ae9df.c:166:9: error: expected declaration or statement at end of input
